# cochan

./: .clang-format  .gitignore  CMakeLists.txt  DISCUSSION.md  LICENSE  README.md
include/co_chan/: channel.hpp  receiver.hpp  sender.hpp  utils.hpp
include/cochan/: channel.hpp  cochan.hpp  receiver.hpp  sender.hpp  utils.hpp
src/: channel.cpp  co_chan.cpp  receiver.cpp  sender.cpp
tests/: CMakeLists.txt  dummy_coro.hpp  playground.cpp  sender_drop.cpp  sender_receiver_test.cpp  test.cpp  test_with_libcoro.cpp
tests/libcoro/: CMakeLists.txt  awaitables_test.cpp  close_test.cpp  sender_receiver_test.cpp
